--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <!--Header-->
 <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Fluid jumbotron</h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+          <h1 class="display-4">Lindsey Dickerson</h1>
+          <p class="lead">Coder</p>
         </div>
       </div>
 <!--end header--> 
