--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <ul>
             <li><a href="https://codepen.io/lnzdkrsn/pen/RwbojmK" target="_blank">Pre-Work Assignment</a></li>
             <li><a href="https://codepen.io/lnzdkrsn/pen/eqyYoK" target="_blank">CSS Creature</a></li>
-            <li><a href="https://lindseydickerson.github.io/revisedStaticLayout/" target="_blank">Static Layout</a></li>
+            <li><a href="https://lindseydickerson.github.io/revisedStaticLayout/index.html" target="_blank">Static Layout</a></li>
             <li><a href="https://elevenfiftylmdmakeup.firebaseapp.com/?" target="_blank">API Project</a></li>
           </ul>
 
