fixing link to api project

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link active" href="#about">About</a>
-          <a class="nav-item nav-link active" href="#portfolio">Portfolio</a>
-          <a class="nav-item nav-link active" href="#contact">Contact Me</a>
+          <a class="nav-item nav-link active" href="#spacer1">About</a>
+          <a class="nav-item nav-link active" href="#spacer2">Portfolio</a>
+          <a class="nav-item nav-link active" href="#spacer3">Contact Me</a>
         </div>
       </div>
     </nav>
@@ -72,7 +72,7 @@
   </div>
   <!--end header-->
 
-
+<div id="spacer1"></div>
 
   <!-- ABOUT -->
   <div id="about">
@@ -109,6 +109,8 @@
   </div>
   <!-- END ABOUT -->
   <hr>
+
+  <div id="spacer2"></div>
 <!-- Portfolio -->
 <div id="portfolio">
     <div class="container">
@@ -120,12 +122,14 @@
             <li><a href="https://codepen.io/lnzdkrsn/pen/RwbojmK" target="_blank">Pre-Work Assignment</a></li>
             <li><a href="https://codepen.io/lnzdkrsn/pen/eqyYoK" target="_blank">CSS Creature</a></li>
             <li><a href="https://lindseydickerson.github.io/revisedStaticLayout/index.html" target="_blank">Static Layout</a></li>
-            <li><a href="https://elevenfiftylmdmakeup.firebaseapp.com/?" target="_blank">API Project</a></li>
+            <li><a href="http://elevenfiftylmdmakeup.firebaseapp.com/?" target="_blank">API Project</a></li>
           </ul>
 
 
 <!-- End Portfolio -->
 <hr>
+
+<div id="spacer3"></div>
   <!-- Contact -->
   <div id="contact">
     <div class="container">
