--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li><a href="https://codepen.io/lnzdkrsn/pen/RwbojmK" target="_blank">Pre-Work Assignment</a></li>
             <li><a href="https://codepen.io/lnzdkrsn/pen/eqyYoK" target="_blank">CSS Creature</a></li>
             <li><a href="https://lindseydickerson.github.io/revisedStaticLayout/index.html" target="_blank">Static Layout</a></li>
-            <li><a href="http://elevenfiftylmdmakeup.firebaseapp.com/?" target="_blank">API Project</a></li>
+            <li><a href="https://https://glamrepoclient.herokuapp.com/" target="_blank">Blue Badge Project</a>
           </ul>
 
 
